--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,7 @@ Title: Helper Functions for Market Basket Analysis
 Version: 0.0.9
 Authors@R: person("Aravind", "Hebbali", email = "hebbali.aravind@gmail.com", role = c("aut", "cre"),
     comment = c(ORCID = "0000-0001-9220-9669"))
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Description: Miscellaneous functions for market basket analysis.
 Depends:
     R(>= 3.2)
 Imports:
@@ -13,7 +12,7 @@ Imports:
     magrittr,
     rlang,
     tidyr
-License: What license is it under?
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
