--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: mbar
 Type: Package
 Title: Helper Functions for Market Basket Analysis
-Version: 0.0.9
+Version: 0.1.0
 Authors@R: person("Aravind", "Hebbali", email = "hebbali.aravind@gmail.com", role = c("aut", "cre"),
     comment = c(ORCID = "0000-0001-9220-9669"))
-Description: Miscellaneous functions for market basket analysis.
+Description: Helper function for preprocessing data for market basket analysis.
 Depends:
     R(>= 3.2)
 Imports:
@@ -12,7 +12,11 @@ Imports:
     magrittr,
     rlang,
     tidyr
+Suggests: 
+    covr,
+    testthat
 License: MIT + file LICENSE
+BugReports: https://github.com/rsquaredacademy/descriptr/issues
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
